--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
         <div class="razorpay">
             <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_IBs6woc5VJ2CLB" async> </script> </form>
         </div>
-        <img src="./images/Untitled-3.jpg" alt="">
-        <img src="./images/Untitled-32.jpg" alt="">
-        <img src="./images/Untitled-33.jpg" alt="">
-        <img src="./images/Untitled-34.jpg" alt="">
-        <img src="./images/Untitled-35.jpg" alt="">
-        <img src="./images/Untitled-36.jpg" alt="">
-        <img src="./images/Untitled-38.jpg" alt="">
-        <img src="./images/Untitled-39.jpg" alt="">
-        <img src="./images/Untitled-310.jpg" alt="">
-        <img src="./images/Untitled-311.jpg" alt="">
-        <img src="./images/Untitled-312.jpg" alt="">
-        <img src="./images/Untitled-313.jpg" alt="">
-        <img src="./images/Untitled-314.jpg" alt="">
-        <img src="./images/Untitled-315.jpg" alt="">
+        <img src="./images/Untitled-3-min.jpg" alt="">
+        <img src="./images/Untitled-32-min.jpg" alt="">
+        <img src="./images/Untitled-33-min.jpg" alt="">
+        <img src="./images/Untitled-34-min.jpg" alt="">
+        <img src="./images/Untitled-35-min.jpg" alt="">
+        <img src="./images/Untitled-36-min.jpg" alt="">
+        <img src="./images/Untitled-38-min.jpg" alt="">
+        <img src="./images/Untitled-39-min.jpg" alt="">
+        <img src="./images/Untitled-310-min.jpg" alt="">
+        <img src="./images/Untitled-311-min.jpg" alt="">
+        <img src="./images/Untitled-312-min.jpg" alt="">
+        <img src="./images/Untitled-313-min.jpg" alt="">
+        <img src="./images/Untitled-314-min.jpg" alt="">
+        <img src="./images/Untitled-315-min.jpg" alt="">
         
         <img src="" alt="">
     </div>
