--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omniverse- Galdan Namchot</title>
     <style>
+        *{
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+        }
 .container img{
 
     /* width: 100vw;
@@ -31,12 +36,17 @@
 .container{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .razorpay form{
     position: fixed;
 }
 .razorpay-payment-button{
     height: 75px;
+}
+img{
+    height: 60%;
+    width: 60%;
 }
 @media  (max-width:700px){
         img{
