--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@ background-color: #FF6600
 a{
     text-decoration: none;
 }
+a div{
+    color: white;
+}
 
 @media  (max-width:700px){
         img{
