file name changed

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ a div{
         <img src="./images/Untitled-312-min.jpg" alt="">
         <img src="./images/Untitled-313-min.jpg" alt="">
         <img src="./images/Untitled-314-min.jpg" alt="">
-        <img src="./images/Untitled-315-min.jpg" alt="">
+        <!-- <img src="./images/Untitled-315-min.jpg" alt=""> -->
         
         <img src="" alt="">
     </div>
