--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             box-sizing: border-box;
             padding: 0;
             margin: 0;
+            scroll-behavior: smooth;
         }
 .container img{
 
@@ -240,6 +241,7 @@ a div{
         <img src="./images/Untitled-34-min.jpg" alt="">
         <img src="./images/Untitled-35-min.jpg" alt="">
         <img src="./images/Untitled-36-min.jpg" alt="">
+        <img src="./images/Untitled-37-min.jpg" alt="">
         <img src="./images/Untitled-38-min.jpg" alt="">
         <img src="./images/Untitled-39-min.jpg" alt="">
         <img src="./images/Untitled-310-min.jpg" alt="">
