--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
             box-sizing: border-box;
             padding: 0;
             margin: 0;
-            scroll-behavior: smooth;
+            
         }
+        html {
+  scroll-behavior: smooth;
+}
 .container img{
 
     width: 99vw;
